moved my local bins and updated hypr/waybar config

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -5,10 +5,12 @@ exec-once = uwsm-app -- steam
 exec-once = uwsm-app -- thunderbird
 exec-once = uwsm-app -- obsidian
 exec-once = uwsm-app -- neovide
+exec-once = uwsm-app -- alacritty --class fullscreen --title main-terminal --command zsh
+exec-once = uwsm-app -- alacritty --class yazi --title yazi --command yazi
 
 # Start all plugins and set the cursor theme
-exec-once = hyprpm reload
-exec-once = hyprctl setcursor Bibata-Modern-Classic 26 # set to fucking BIBATA baby 🥳
+# exec-once = hyprpm reload
+# exec-once = hyprctl setcursor Bibata-Modern-Classic 26 # set to fucking BIBATA baby 🥳
 
 # Apply the bibata cursor theme using hyprcursor
 env = HYPRCURSOR_THEME,Bibata-Original-Ice
