--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,6 +1,7 @@
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- xdg-terminal-exec -c yazi
+bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- kitty --class yazi --title yazi "yazi"
+bindd = SUPER SHIFT ALT, F, File manager, exec, uwsm-app -- kitty --class yazi-floating "yazi" 
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
