--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,10 @@ windowrule = workspace 5, match:class vesktop
 windowrule = no_initial_focus 1, match:class vivaldi-stable
 windowrule = workspace 2, match:class vivaldi-stable
 
+windowrule = no_initial_focus 1, match:class .*neovide.*
+windowrule = no_initial_focus 1, match:class org.omarchy.nvim
 windowrule = workspace 8, match:class org.omarchy.nvim
+windowrule = workspace 8, match:class neovide
 
 windowrule = no_initial_focus 1, match:class obsidian
 windowrule = workspace 9, match:class obsidian
@@ -38,15 +41,34 @@ windowrule = workspace 9, match:class obsidian
 windowrule = workspace 11, match:initial_class .*vivaldi-bsky.app__-Default*
 
 # steam window rules
+windowrule = no_initial_focus 1, match:class .*steam.*
 windowrule = workspace 12, match:class .*steam.*
 windowrule = center 1, match:class .*steam.*
-windowrule = no_initial_focus 1, match:class .*steam.*
 
 windowrule = no_initial_focus 1, match:class org.mozilla.Thunderbird
 windowrule = workspace 10, match:class org.mozilla.Thunderbird
 
 windowrule = workspace 13, match:class .*Godot.*
+
+
 windowrule = workspace 3, match:class code
+
+
+windowrule = workspace 14, match:class .*blender.*
+
+windowrule = workspace 15, match:title yazi
+
+# make any window that contains floating in the class float
+windowrule = float on, match:class .*floating.*
+
+# make alacritty + class fullscreen on window 1
+windowrule = no_initial_focus 1, match:title .*main-terminal.*
+windowrule = fullscreen on, match:class .*fullscreen.*
+windowrule = workspace 1, match:title main-terminal
+
+# Make debug versions of games centered and floating
+windowrule = float on, match:title .*DEBUG.*
+windowfule = center 1, match:title .*DEBUG.*
 
 
 # exec-once = hyprctl setcursor Bibata-Modern-Classic 24
@@ -59,3 +81,9 @@ animation = windows, 1, 2, overshoot, popin
 animation = windowsOut, 1, 2, overshoot, popin
 
 
+exec-once = hyprpm reload
+exec-once = hyprctl setcursor Bibata-Modern-Ice 26 # set to fucking BIBATA baby 🥳
+
+# Apply the bibata cursor theme using hyprcursor
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,26
