Updated some dotfiles idk

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -5,8 +5,8 @@ exec-once = uwsm-app -- steam
 exec-once = uwsm-app -- thunderbird
 exec-once = uwsm-app -- obsidian
 exec-once = uwsm-app -- neovide
-exec-once = uwsm-app -- alacritty --class fullscreen --title main-terminal --command zsh
-exec-once = uwsm-app -- alacritty --class yazi --title yazi --command yazi
+exec-once = uwsm-app -- kitty --class fullscreen --title main-terminal --command zsh
+exec-once = uwsm-app -- kitty --class yazi --title yazi --command yazi
 
 # Start all plugins and set the cursor theme
 # exec-once = hyprpm reload
@@ -18,5 +18,5 @@ env = HYPRCURSOR_SIZE,26
 
 # Start this last beacause it will block the execution
 # of everything else
-exec-once = sleep 10 && syncthingtray
+# exec-once = sleep 10 && syncthingtray
 # exec-once = syncthingtray
