--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -1,3 +1,4 @@
 # Extra env variables
 # env = MY_GLOBAL_ENV,setting
 env = OMARCHY_SCREENSHOT_DIR,/home/sewdohe/Pictures/Screenshots
+env = PATH,$HOME/.local/bin:$PATH
