--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,13 +22,15 @@ source = ~/.config/hypr/autostart.conf
 # Add any other personal Hyprland configuration below
 
 # Make all windows fully opaque by default
-windowrule = opacity 1 1, match:class .*
+# windowrule = opacity 0.8 0.7, match:class .*
+windowrule = no_blur on, match:class .*
 
 windowrule = no_initial_focus 1, match:class vesktop
 windowrule = workspace 5, match:class vesktop
 
 windowrule = no_initial_focus 1, match:class vivaldi-stable
 windowrule = workspace 2, match:class vivaldi-stable
+windowrule = float on, match:title .*Vivaldi Settings.*
 
 windowrule = no_initial_focus 1, match:class .*neovide.*
 windowrule = no_initial_focus 1, match:class org.omarchy.nvim
@@ -51,6 +53,9 @@ windowrule = workspace 10, match:class org.mozilla.Thunderbird
 windowrule = workspace 13, match:class .*Godot.*
 
 
+windowrule = workspace 16, match:class .*youtube.*
+
+
 windowrule = workspace 3, match:class code
 
 
@@ -60,6 +65,10 @@ windowrule = workspace 15, match:title yazi
 
 # make any window that contains floating in the class float
 windowrule = float on, match:class .*floating.*
+windowrule = center on, match:class .*floating.*
+windowrule = size 960 540, match:class .*floating.*
+
+
 
 # make alacritty + class fullscreen on window 1
 windowrule = no_initial_focus 1, match:title .*main-terminal.*
@@ -70,20 +79,33 @@ windowrule = workspace 1, match:title main-terminal
 windowrule = float on, match:title .*DEBUG.*
 windowfule = center 1, match:title .*DEBUG.*
 
+layerrule = ignore_alpha 0, match:namespace walker
+layerrule = blur on, match:namespace walker
+layerrule = xray off, match:namespace walker
+layerrule = blur_popups on, match:namespace walker
+
 
 # exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
-bezier = overshoot, 0.05, 0.9, 0.1, 1.4
+bezier = overshoot, 0.05, 0.9, 0.1, 1.2
 
 # Define animations
-animation = workspaces, 1, 2, overshoot, slide
-animation = windows, 1, 2, overshoot, popin
-animation = windowsOut, 1, 2, overshoot, popin
+animation = workspaces, 1, 8, overshoot, slide
+animation = windows, 1, 8, overshoot, popin
+animation = windowsOut, 1, 8, overshoot, popin
 
 
 exec-once = hyprpm reload
-exec-once = hyprctl setcursor Bibata-Modern-Ice 26 # set to fucking BIBATA baby 🥳
+# exec-once = hyprctl setcursor Bibata-Modern-Ice 32 # set to fucking BIBATA baby 🥳
+# exec-once = hyprpm enable hyprglass
 
 # Apply the bibata cursor theme using hyprcursor
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-env = HYPRCURSOR_SIZE,26
+env = HYPRCURSOR_SIZE,32
+
+plugin:hyprglass {
+    default_theme = dark
+    # high_contrast, glass, subtle, clear
+    default_preset = glass
+}
+
