--- a/.config/hypr/looknfeel.conf
+++ b/.config/hypr/looknfeel.conf
@@ -15,9 +15,15 @@ general {
 decoration {
     # Use round window corners
     rounding = 8
+    active_opacity = 1.0
+    inactive_opacity = 0.9
+    fullscreen_opacity = 1.0
     shadow {
       enabled = true
-      range = 6
+      range = 12
+    }
+    blur {
+      popups = true
     }
 }
 
