--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -33,6 +33,8 @@
       "11": "",
       "12": "",
       "13": "",
+      "15": "󰉋",
+      "16": "",
     },
     "persistent-workspaces": {
       "1": [],
@@ -135,10 +137,19 @@
       "default": ["", "", ""],
     },
   },
+  "custom/syncthing": {
+    "exec": "~/Dotfiles/.config/waybar/scripts/syncthing.sh",
+    "return-type": "json",
+    "interval": 10,
+    "on-click": "xdg-open http://localhost:8384",
+    "format": "{}",
+    "tooltip": true,
+  },
   "group/right-modules": {
     "orientation": "inherit",
     "modules": [
       "group/tray-expander",
+      "custom/syncthing",
       "bluetooth",
       "network",
       "pulseaudio",
@@ -166,26 +177,26 @@
   },
   "custom/tasks-today": {
     "format": "󰃶 {}",
-    "exec": "obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count --today",
+    "exec": "~/.local/bin/obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count --today",
     "on-click": "xdg-open obsidian://adv-uri?vault=Sewvault&commandid=tasknotes%3Aopen-tasks-view",
     "interval": 60,
     "tooltip": false,
   },
   "custom/tasks-total": {
     "format": " {}",
-    "exec": "obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count",
+    "exec": "~/.local/bin/obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count",
     "interval": 60,
     "tooltip": false,
   },
   "custom/tasks-overdue": {
     "format": " {}",
-    "exec": "obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count --overdue",
+    "exec": "~/.local/bin/obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks count --overdue",
     "interval": 60,
     "tooltip": false,
   },
   "custom/tasks-done": {
     "format": "󰄲 {}",
-    "exec": "obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks -a count --completed-today",
+    "exec": "~/.local/bin/obsidian-tasks --path ~/Documents/Sewvault/TaskNotes/Tasks -a count --completed-today",
     "interval": 60,
     "tooltip-format": "Tasks completed today",
   },
