--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,17 +4,20 @@ general.import = [ "~/.config/omarchy/current/theme/alacritty.toml" ]
 TERM = "xterm-256color"
 
 [font]
-normal = { family = "SpaceMono Nerd Font Mono" }
-bold = { family = "SpaceMono Nerd Font Mono" }
-italic = { family = "SpaceMono Nerd Font Mono" }
+normal = { family = "MesloLGL Nerd Font" }
+bold = { family = "MesloLGL Nerd Font" }
+italic = { family = "MesloLGL Nerd Font" }
 size = 15
+
+[terminal.shell]
+program = "/usr/bin/zsh"
 
 [window]
 padding.x = 14
 padding.y = 14
 decorations = "None"
-opacity = 0.8
-blur = true
+opacity = 0.5
+blur = false
 
 [keyboard]
 bindings = [
