--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,5 +1,7 @@
-[plugin]
-deps = []
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "1962818"
+hash = "91937a4a9b779eabc6983e258befdfe9"
 
 [[flavor.deps]]
 use = "yazi-rs/flavors:catppuccin-frappe"
